feat: Implement perceptron class

--- a/src/coding-assignment-2.ipynb
+++ b/src/coding-assignment-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,42 +20,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Perceptron:\n",
     "    def __init__(self, d):\n",
-    "        #implementation goes here\n",
-    "        \n",
+    "        self.d = d\n",
+    "\n",
+    "    @staticmethod\n",
     "    def LinearClassifier(d):\n",
-    "        #implementation goes here\n",
-    "    \n",
+    "        return Perceptron(d)\n",
+    "\n",
     "    def fit(self, x_train, y_train):\n",
-    "        #implementation goes here\n",
-    "        \n",
+    "        x_train = np.c_[x_train, np.ones(x_train.shape[0])]\n",
+    "\n",
+    "        d = self.d\n",
+    "        self._w = np.zeros(d + 1)\n",
+    "\n",
+    "        while True:\n",
+    "            m = 0\n",
+    "            for i, _ in enumerate(x_train):\n",
+    "                if y_train[i] * np.dot(self._w, x_train[i]) <= 0:\n",
+    "                    self._w += y_train[i] * x_train[i]\n",
+    "                    m += 1\n",
+    "\n",
+    "            if m == 0:\n",
+    "                break\n",
+    "\n",
     "    def predict(self, x):\n",
-    "        #implementation goes here\n",
-    "        \n",
+    "        x = np.append(x, 1)\n",
+    "\n",
+    "        return np.sign(np.dot(self._w, x))\n",
+    "\n",
     "    def score(self, x_test, y_test):\n",
-    "        #implementation goes here\n",
-    "        \n",
-    "        \n",
-    "        "
+    "        score = 0\n",
+    "        for i, _ in enumerate(x_test):\n",
+    "            y_pred = self.predict(x_test[i])\n",
+    "\n",
+    "            if y_test[i] * y_pred > 0:\n",
+    "                score += 1\n",
+    "\n",
+    "        accuracy = score / x_test.shape[0]\n",
+    "\n",
+    "        return accuracy\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-2.2 -5.4  9.3  4.  -1. ]\n",
-      "Accuracy: 100.0%\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
